style.css
/*  General styles  */

@font-face {
	font-family: century gothic;
	src: url("./assets/CenturyGothic.ttf");
}

body {
	min-height: 100vh;
	margin: 0;
	padding: 0;
	
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	
	background-color: #FFFFFF;
}

.bg-image {
	position: absolute;
	top: 0;
	left: 0;
	height: 100vh;
	width: 100vw;
	background-image: url("./assets/covers/wunder.png");
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	filter: blur(20px);
	z-index: -1;
}

p, a {
	font-family: century gothic;
	color: #FFFFFF;
	transition: color 0.4s;
}

a:hover { color: #b4e0fb; }


/* Index misc styles */


.main {
	margin: 0;
	padding: 0;
	
	display: flex;
	justify-content: center;
	align-items: center;
}

.wrap {
	display: flex;
	flex-direction: column;
	gap: 5px;
}

.cover-div {
	display: flex;
	align-items: center;
}

.cover {
	height: 50vh;
	object-fit: cover;
}

.performer-div, .name-div {
	display: flex;
	justify-content: center;
}

.perf {}

.song-name {
	font-size: 0.9em;
}


/*  Lower Index misc styles  */


.time {
	display: flex;
	justify-content: space-between;
}

.song-length-div {}

.controls-div {
	display: flex;
	justify-content: center;
	align-items: center;
	gap:  2em;
}


/*  Play button styles  */


.play-btn {
	width: 4em;
	height: 4em;
	position: relative;
	background: url("./assets/buttons/play.png"), linear-gradient(to bottom, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.4));
	background-size: contain;
	border-radius: 50%;
}

.pause {
	background-image: url("./assets/buttons/pause.png"), linear-gradient(to bottom, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.4));
}

.play-btn::before {
	content: " ";
	position: absolute;
	top: 0;
	left: -0.1em;
	height: 4em;
	width: 4em;
	background-image: url("./assets/blik.png");
	background-repeat: no-repeat;
	background-position: top;
	background-size: contain;
	opacity:  0.4;
	z-index: 10;
}

/*  Other buttons styles  */


.prev {
	width: 2em;
	height: 2em;
	position: relative;
	background: url("./assets/buttons/prev.png"), linear-gradient(to bottom, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.4));
	background-size: contain;
	border-radius: 50%;
}

.next {
	width: 2em;
	height: 2em;
	position: relative;
	background: url("./assets/buttons/next.png"), linear-gradient(to bottom, rgba(256, 256, 256, 0.2), rgba(256, 256, 256, 0.4));
	background-size: contain;
	border-radius: 50%;
}

.prev::before {
	content: " ";
	position: absolute;
	top: 0;
	left: -0.1em;
	height: 2em;
	width: 2em;
	background-image: url("./assets/blik.png");
	background-repeat: no-repeat;
	background-position: top;
	background-size: contain;
	opacity:  0.4;
	z-index: 10;
}

.next::before {
	content: " ";
	position: absolute;
	top: 0;
	left: -0.1em;
	height: 2em;
	width: 2em;
	background-image: url("./assets/blik.png");
	background-repeat: no-repeat;
	background-position: top;
	background-size: contain;
	opacity:  0.4;
	z-index: 10;
}


/*  Footer styles  */


.footer {
	margin: 1.25em 2.5em;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-end;
	gap: 1.25em;
}

.footer-logo {
	max-width: 12em;
	opacity: 1;
	transition: opacity 0.4s;
}

.footer-logo:hover { opacity: 0.775; }


/*  Media querries  */


@media screen and (max-width: 1024px) { }

@media screen and (max-width: 600px) {
	
	.footer-logo { width: 35vw; }
}

@media screen and (max-width: 500px) { }

